[package]
name = "termagotchi"
description = "A terminal tamagotchi game"
version = "0.2.0"
authors = ["Trevor Arjeski <tmarjeski@gmail.com>"]
edition = "2018"
repository = "https://github.com/trevarj/termagotchi"
license-file = "LICENSE"
keywords = ["game", "terminal", "fun", "beginner"]
categories = ["games"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
crossterm = "0.25.0"
directories = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"